<resources>
    <string name="app_name">MAD  NEW</string>
    <string-array name="districts">
        <item>Colombo</item>
        <item>Gampaha</item>
        <item>Matara</item>
    </string-array>
    <string name="title_activity_location">Location</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="select_location">Please Select Your location.</string>
    <string name="hello">Hello</string>
    <string name="thisara">Thisara</string>
    <string name="search_elements">Search_elements</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="myOrders">My Orders</string>
    <string name="myProfile">My Profile</string>
    <string name="contactUs">Contact Us</string>
    <string name="policy">Privacy Policy</string>
    <string name="aboutUs">About Us</string>
    <string name="redvelvet"> One PCS-LKR 200.00</string>
    <string name="chocolate">One PCS-LKR 180.00</string>
    <string name="vanilla">One PCS-150.00</string>
    <string name="kitkat">One PCS-LKR 325.00</string>
    <string name="stawberry">One PCS-LKR 275.00</string>
    <string name="galaxy">One PCS-LKR 200.00</string>
    <string name="cherry">One PCS-LKR 270.00</string>
    <string name="heaven">One PCS-LKR 250.00</string>
    <string name="about_us">Sadini Catering is the leading events catering company in Sri Lanka! With offices in the major cities of Colombo and Kandy, we are equipped to look after all your function requirements. Our friendly office staff will take care of your order when you are ready to book. We can run you through the entire range of our products and give you all the information you require, making catering for your next function a breeze.</string>
    <string name="about_us_two">We have put together a number of fabulous packages to suit any occasion, from weddings and engagements to country themed functions. Sadini Catering has all the experience and exppertise needed to provide most suitable cuisine for your event. We do all the work and take pride in the exceptional catering service that we provide.</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>