<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menuHome"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>

    <item android:id="@+id/menuOder"
        android:icon="@drawable/ic_myoder"
        android:title="@string/myOrders"/>

    <item android:id="@+id/menuProfile"
        android:icon="@drawable/ic_profile"
        android:title="@string/myProfile"/>

    <item android:id="@+id/menuContactUs"
        android:icon="@drawable/ic_contact_us"
        android:title="@string/contactUs"/>

    <item android:id="@+id/menuPolicy"
        android:icon="@drawable/ic_policy"
        android:title="@string/policy"/>

    <item android:id="@+id/menuAboutUs"
        android:icon="@drawable/ic_about_us"
        android:title="@string/aboutUs"/>
</menu>